@@ -20,6 +20,7 @@ package org.pentaho.reporting.designer.core.util;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Map;
 import java.util.StringTokenizer;
 
 import edu.stanford.ejalbert.BrowserLauncher;
@@ -36,6 +37,7 @@ import org.pentaho.reporting.libraries.base.util.StringUtils;
 public class ExternalToolLauncher
 {
   private static final Log logger = LogFactory.getLog(ExternalToolLauncher.class);
+  private static final long timeout = 10000;
 
   private ExternalToolLauncher()
   {
@@ -172,6 +174,7 @@ public class ExternalToolLauncher
   {
     // todo: Use a stream tokenizer (well, a custom one, as the builtin one messes up escaped quotes)
     // so that we can handle quoting gracefully ..
+    boolean exitValue = true;
     final ArrayList<String> command = new ArrayList<String>();
     command.add(executable);
     for (StringTokenizer tokenizer = new StringTokenizer(parameters); tokenizer.hasMoreTokens();)
@@ -192,16 +195,46 @@ public class ExternalToolLauncher
       }
     }
 
-    final Process process = Runtime.getRuntime().exec(command.toArray(new String[command.size()]));
+    final ProcessBuilder processBuilder = new ProcessBuilder(command.toArray(new String[command.size()]));
+    Process process = null;
     try
     {
-      return (process.exitValue() == 0);
+      process = processBuilder.start();
+    }catch(IOException ioex){
+
+    }
+    ProcessWrapper processWrapper = null;
+    try{
+      processWrapper = new ProcessWrapper(process);
+      processWrapper.start();
+
+      processWrapper.join(timeout);
+      if (processWrapper.getfExitCode() != null) {
+        exitValue = processWrapper.getfExitCode() == 0;
+      } else {
+        // Set our exit code to 1
+        exitValue = false;
+        process.destroy();
+      }
+      //final Process p = process.start();
+      //p.waitFor();
+      //exitValue = p.exitValue() == 0;
+      // 0 == normal; 2 == permissions issue, 3 == no rules found in mimeType
+      System.out.print("exitCode = " + processWrapper.getfExitCode());
+    }
+    catch(InterruptedException ie){
+      processWrapper.interrupt();
+      Thread.currentThread().interrupt();
+      process.destroy();
+      exitValue = false;
     }
     catch (Exception e)
     {
-      // process still runs, so assume everything is fine.
-      return true;
+      logger.error("Error in Exec command "+command +" error: "+e.getMessage());
+      // process fails so redirect to openURL command to locate viewer
+      exitValue = false;
     }
+    return exitValue;
   }
 
   protected static String safeSystemGetProperty(final String name,
@@ -254,6 +287,7 @@ public class ExternalToolLauncher
       final File mailcapExe = new File("/usr/bin/run-mailcap"); // NON-NLS
       if (mailcapExe.exists())
       {
+        logger.debug("found /usr/bin/run=mailcap");
         if (execute("/usr/bin/run-mailcap", "{0}", file.getCanonicalPath()) == false) // NON-NLS
         {
           openURL(file.toURI().toURL().toString());
@@ -292,6 +326,28 @@ public class ExternalToolLauncher
       openURL(file.toURI().toURL().toString());
     }
 
+  }
+
+  static class ProcessWrapper extends Thread {
+
+    private final Process fProcess;
+
+    private Integer fExitCode;
+
+    public Integer getfExitCode() {
+      return fExitCode;
+    }
+
+    public ProcessWrapper(Process fProcess) {
+      this.fProcess = fProcess;
+    }
+
+    public void run() {
+      try {
+        fExitCode = fProcess.waitFor();
+      } catch (InterruptedException e) {
+      }
+    }
   }
 
 }
